small block visibility fix

--- a/src/app/block/block.component.css
+++ b/src/app/block/block.component.css
@@ -45,4 +45,5 @@ p{
 .glow {
   box-shadow: 0 0 10px 5px black;
   transition: box-shadow 0.15s ease-in-out;
+  z-index: 10000;
 }
